<resources>
    <string name="app_name">Taksapp</string>
    <string name="text_welcome">Bem vindo ao Taksapp</string>
    <string name="do_sign_up">Efectuar Registro</string>
    <string name="text_or">Ou</string>
    <string name="text_start">Começar</string>
    <string name="text_login_as_driver">Entrar Como Motorista</string>
    <string name="text_login">Entrar</string>
    <string name="text_do_sign_up">Efectuar Registo</string>
    <string name="hint_phone_number">Numero de Telemovel</string>
    <string name="hint_password">Palavra-passe</string>
    <string name="text_sign_in_as_rider">Entrar como passageiro</string>
    <string name="text_server_error">Ocorreu um erro com os nossos servidores. Tente mais tarde.</string>
    <string name="text_inexistent_account">Não existe uma conta associada à este numero</string>
    <string name="text_incorrect_password">Palavra-passe incorrecta</string>
    <string name="error_type_your_phone_number">Escreva seu numero de telemovel</string>
    <string name="error_type_a_correct_phone_number">Escreva correctamente seu número de telemóvel</string>
    <string name="error_type_your_password">Escreva sua palavra-passe</string>
    <string name="error_type_password_with_correct_amount_of_characters">Sua palavra-passe deve ter no mínimo 6
        caracteres
    </string>
    <string name="text_internet_error">Conexão à internet indisponível</string>
    <string name="text_session_expired">A sua sessão expirou</string>
    <string name="text_sign_in_as_driver">Entrar Como Motorista</string>
    <string name="text_unsupported_application">A versão desta aplicação instalada já não é suportada.</string>
    <string name="text_sign_up">Registar-me</string>
    <string name="hint_name">Primeiro e último nome</string>
    <string name="text_sign_up_as_rider">Registo como passageiro</string>
    <string name="text_confirm_otp">Confirmar</string>
    <string name="hint_otp">Código de Verificação</string>
    <string name="text_otp_confirmation">Verificação por SMS</string>
    <string name="error_type_your_first_and_last_names">Escreva seu primeiro e último nome</string>
    <string name="error_type_yout_first_and_last_names_only">Escreva somente seu primeiro e último nome</string>
    <string name="error_phone_number_already_registered">Este número de telemóvel já foi registado</string>
    <string name="error_type_the_sign_up_otp">Escreva o código de confirmação por SMS</string>
    <string name="error_type_a_correct_otp">O código de confirmação tem de ter 6 dígitos</string>
    <string name="error_otp_expired">O código de verificação expirou</string>
    <string name="error_incorrect_otp">Código de confirmação incorrecto</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_choose_start_location">Escolher a localização inicial</string>
    <string name="text_confirm">Confirmar</string>
    <string name="text_start_place_label">Escolha o local de partida</string>
    <string name="text_destination_place_label">Escolha o local de chegada</string>
    <string name="text_type_the_place_hint">Escreva o local</string>
    <string name="text_waiting_for_driver_acceptance">Esperando resposta de motorista</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_driver_on_its_way">Motorista a caminho</string>
    <string name="error_no_available_drivers">Nao ha motoristas disponiveis</string>
    <string name="text_driver_arrived">Motorista Chegou</string>
    <string name="text_no_drivers_answered_to_request">Nenhum motorista respondeu ao seu pedido de taxi</string>
    <string name="text_taxi_request_finished">Pedido Terminado</string>
    <string name="text_taxi_request_cancelled_by_driver">O pedido de taxi foi cancelado pelo motorista.</string>
    <string name="text_driver">Motorista</string>
    <string name="text_online">Online</string>
    <string name="text_accept">Aceitar</string>
    <string name="text_refuse">Recusar</string>
    <string name="text_incoming_taxi_request">Pedido de Taxi</string>
    <string name="text_on_my_way">A caminho do cliente</string>
    <string name="text_announce_arrival">Cheguei!</string>
    <string name="text_arrived">A espera do cliente</string>
    <string name="text_start_trip">Iniciar Viagem</string>
    <string name="text_offline">Offline</string>
    <string name="text_location_permission">Permissao de Localizacao</string>
    <string name="text_adjust_location_settings">O Taksapp necessita que active as permissoes de localizaçao para que funcione.</string>
    <string name="text_go_to_settings">Ir em definicoes</string>
    <string name="error_taxi_request_accepted_by_another_driver">Pedido de taxi ja foi aceite por outro motorista</string>
    <string name="error_taxi_request_acceptance_failed_due_to_expiry">O pedido de taxi que tentou aceitar ja nao se encontra disponivel.</string>
    <string name="error_title">Erro!</string>
    <string name="text_taxi_request_already_cancelled">A operacao falhou porque o pedido de taxi foi cancelado.</string>
    <string name="text_trip_in_progress">Viagem em Progresso</string>
    <string name="text_finish_trip">Finalizar Viagem</string>
    <string name="text_trip_finished">Viagem Terminada</string>
</resources>
