<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.WelcomeActivity"
    android:padding="@dimen/padding_normal">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageview_logo"
        android:layout_width="@dimen/size_logo"
        android:layout_height="@dimen/size_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textview_welcome"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/textview_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageview_logo"
        app:layout_constraintBottom_toTopOf="@id/button_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/text_welcome"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textAllCaps="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/textview_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_start" />

    <TextView
        android:id="@+id/textview_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_login_as_driver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_or"
        android:textAllCaps="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login_as_driver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/text_login_as_driver"/>

</androidx.constraintlayout.widget.ConstraintLayout>