<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.taksapp.taksapp.ui.auth.viewmodels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.DriverLoginActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageview_logo"
            android:layout_width="@dimen/size_logo"
            android:layout_height="@dimen/size_logo"
            app:layout_constraintBottom_toTopOf="@id/textinputlayout_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/text_sign_in_as_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/text_sign_in_as_driver"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageview_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            app:layout_constraintBottom_toTopOf="@id/textinputlayout_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/hint_phone_number"
            android:enabled="@{!viewModel.loading}"
            app:error="@{viewModel.phoneNumberError}"
            app:errorEnabled="@{viewModel.phoneNumberError != null}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="9"
                android:text="@={viewModel.phoneNumber}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            app:layout_constraintBottom_toTopOf="@id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/hint_password"
            android:enabled="@{!viewModel.loading}"
            app:error="@{viewModel.passwordError}"
            app:passwordToggleEnabled="true"
            app:errorEnabled="@{viewModel.passwordError != null}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword|number"
                android:maxLength="6"
                android:text="@={viewModel.password}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressbar_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toTopOf="@id/button_login"
            app:layout_constraintEnd_toEndOf="@id/button_login"
            app:layout_constraintStart_toStartOf="@id/button_login"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.INVISIBLE}"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_xlarge"
            android:onClick="@{_ -> viewModel.loginAsDriver()}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>